# deaddrop

./: CMakeLists.txt  README.md  duplex.c  mit.txt  receiver.c  receiver.h  sender.c  sender.h
libs/: CMakeLists.txt  Makefile  cmake_install.cmake  util.c  util.h
